[package]
name = "bustcall"
version = "0.1.0"
edition = "2021"
authors = ["OBINexus Team <obinexus@obinexus.com>"]
description = "World's first polyglot cache buster with constitutional compliance"
license = "Apache-2.0"

[lib]
name = "bustcall_core"
crate-type = ["cdylib", "rlib"]

# Binary targets for OBINexus architecture
[[bin]]
name = "bustcall"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "bustcall-daemon"
path = "src/bin/bustcall-daemon.rs"
required-features = ["daemon"]

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"
required-features = ["daemon", "byzantine-consensus"]

[dependencies]
# Core dependencies (always available)
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
notify = "6.1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Error handling framework
thiserror = "1.0"

# Caching and data structures
dashmap = "5.5"
redis = { version = "0.24", optional = true }
tempfile = "3.8"

# Async runtime for Byzantine consensus
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
parking_lot = { version = "0.12", optional = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }

# FFI bindings (optional)
pyo3 = { version = "0.20", optional = true }

# Random number generation for proof-of-work
rand = { version = "0.8", optional = true }

[features]
# Default feature set for basic operation
default = ["cli"]

# Core features
cli = ["clap"]
daemon = ["tokio", "futures", "parking_lot", "rand"]
byzantine-consensus = ["daemon", "tokio/full"]
redis-backend = ["redis"]

# FFI bindings
ffi = ["ffi-all"]
ffi-all = ["python-bindings", "c-bindings"] 
python-bindings = ["pyo3"]
c-bindings = []

# Development and testing
development = ["daemon", "byzantine-consensus", "ffi-all", "redis-backend"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true